--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			};
 		}
 	</script>
+	<link href="https://cdn.bootcss.com/Swiper/4.0.6/css/swiper.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,6 +31,7 @@
 
   </div>
   <!-- built files will be auto injected -->
+  <script src="https://cdn.bootcss.com/Swiper/4.0.6/js/swiper.min.js"></script>
 </body>
 
 </html>
