--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   </div>
   <!-- built files will be auto injected -->
+  <script src="https://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js"></script>
   <script src="https://cdn.bootcss.com/Swiper/4.0.6/js/swiper.min.js"></script>
 </body>
 
