--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
   </div>
   <!-- built files will be auto injected -->
   <script src="https://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js"></script>
+  <script>
+	if ('addEventListener' in document) {  
+		document.addEventListener('DOMContentLoaded', function() {  
+			FastClick.attach(document.body);  
+		}, false);  
+	}  
+  </script>
   <script src="https://cdn.bootcss.com/Swiper/4.0.6/js/swiper.min.js"></script>
 </body>
 
